--- a/MyTaskManagment/nbproject/project.properties
+++ b/MyTaskManagment/nbproject/project.properties
@@ -75,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=MyTaskManagment
-main.class=data.TestarConexao
+main.class=view.LoginForm
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
