--- a/MyTaskManagment/nbproject/project.properties
+++ b/MyTaskManagment/nbproject/project.properties
@@ -39,7 +39,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar}
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${libs.JDBC_Teste.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
