--- a/MyTaskManagment/nbproject/project.properties
+++ b/MyTaskManagment/nbproject/project.properties
@@ -35,11 +35,13 @@ dist.jlink.output=${dist.jlink.dir}/MyTaskManagment
 excludes=
 file.reference.jcalendar-1.4.jar=../../../../../jCalendar/lib/jcalendar-1.4.jar
 file.reference.jfreechart-1.0.19.jar=../../../../../jfreechart-1.0.19/lib/jfreechart-1.0.19.jar
+file.reference.mysql-connector-java-5.1.47.jar=..\\..\\..\\..\\..\\..\\..\\..\\Downloads\\mysql-connector-java-5.1.47.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar}
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.mysql-connector-java-5.1.47.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -75,7 +77,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=MyTaskManagment
-main.class=view.LoginForm
+main.class=tela.LoginForm
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
